feat(app): add authentication flow, shared layout components, and HTTP client setup

--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -8,3 +8,14 @@
 @using Microsoft.JSInterop
 @using Client
 @using Client.Layout
+
+//Inject
+@inject NavigationManager NavManager
+
+// Fluent
+@using Microsoft.FluentUI.AspNetCore.Components
+@using Icons = Microsoft.FluentUI.AspNetCore.Components.Icons
+
+// Component
+@using Client.Pages.Component.Header
+@using Client.Pages.Component.Footer
